RESOLVED FIXED141180
[FTL] inlined GetMyArgumentByVal with no arguments passed causes instant crash
https://bugs.webkit.org/show_bug.cgi?id=141180
Summary [FTL] inlined GetMyArgumentByVal with no arguments passed causes instant crash
Filip Pizlo
Reported 2015-02-02 15:45:29 PST
Patch forthcoming.
Attachments
the patch (4.44 KB, patch)
2015-02-02 16:10 PST, Filip Pizlo
benjamin: review+
Filip Pizlo
Comment 1 2015-02-02 16:10:12 PST
Created attachment 245911 [details] the patch
Benjamin Poulain
Comment 2 2015-02-02 16:40:13 PST
Comment on attachment 245911 [details] the patch lgtm
Filip Pizlo
Comment 3 2015-02-02 16:43:36 PST
Note You need to log in before you can comment on or make changes to this bug.